# daily-photo-bot

./: .env.example  .gitignore  README.md  conftest.py  opencode-init.md  output-task3-db-investigation.md  output-task7-diagnostics.md  pyproject.toml
.github/workflows/: ai-garbage-collect.yml
docs/: state.md
docs/plans/: README.md  agent-log.md  garbage-collection.md  v2-feedback-strategy.md  v3-todo-list.md
feedback/: after_first_version_deployment.txt
src/: main.py
src/config/: __init__.py  constants.py  i18n.py  logging.py  settings.py
src/repo/: __init__.py  analytics_repo.py  database.py  schedule_repo.py  sent_photo_repo.py  share_repo.py  topic_repo.py  user_repo.py
src/runtime/: __init__.py  app.py  caption.py  job_utils.py  keyboards.py
src/service/: __init__.py  analytics_service.py  payment_service.py  photo_service.py  schedule_service.py  share_service.py  topic_service.py
src/types/: __init__.py  analytics.py  exceptions.py  i18n.py  payment.py  photo.py  protocols.py  schedule.py  share.py  user.py
tests/integration/: test_analytics_repo.py  test_schedule_repo.py  test_sent_photo_repo.py  test_share_repo.py  test_topic_repo.py  test_user_repo.py
tests/unit/: test_analytics_handler.py  test_analytics_service.py  test_caption.py  test_enrich_query.py  test_i18n.py  test_payment_service.py  test_photo_service.py  test_quick_commands_handler.py  test_schedule_handler.py  test_schedule_service.py  test_share_handler.py  test_share_service.py  test_topic_handler.py  test_topic_service.py
tools/ai-linters/: layer-dependency-check.py
(+23 files in other folders)
